--- a/Snake2/MainWindow.xaml
+++ b/Snake2/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="SnakeGame" Height="450" Width="800" KeyDown="canvas_KeyDown">
     <Grid>
-
+        <Canvas x:Name="canvas"></Canvas>
     </Grid>
 </Window>
